# avoidance

./: .gitignore  CMakeLists.txt  Makefile
applications/tests/avoidance/: main.cpp  pyavoidance.pyx  test_avoidance.py
lib/avoidance/: Avoidance.cpp
lib/avoidance/include/avoidance/: Avoidance.hpp
lib/obstacles/: Obstacle.cpp  ObstacleCircle.cpp  ObstaclePolygon.cpp  ObstacleRectangle.cpp
lib/obstacles/include/obstacles/: Obstacle.hpp  ObstacleCircle.hpp  ObstaclePolygon.hpp  ObstacleRectangle.hpp
